# vulkan_study

./: .clang-format  .gitignore  ADD_BOM_GUIDE.md  AGENTS.md  CMakeLists.txt  CMakeUserPresets.json  HelloTriangleApplication.cpp  HelloTriangleApplication.h  LICENSE  PHASE_1_3_STATUS.md  PROJECT_PLAN.md  ProjectStructure.md  README.md  Vulkan项目详解.md  add_bom.bat  add_bom.sh  build.bat  build_test.bat  check_bom.py  conan_build.bat  conan_build.sh  conan_provider.cmake  conanfile.py  copilot-session-e2a90ff1-9733-4880-bdfc-92c40132691d.md  imgui.ini  main.cpp  simple_build.bat  vcpkg.json  verify_cmake.py  新架构规划.md  检查结果.md  现代化重构架构方案.md
.codebuddy/agents/: graphics_vulkan_agent.md
.github/agents/: Vulkan Graphics API expert.agent.md  my-agent.agent.md
.github/workflows/: Generate Documentation.yaml  issue-triage.yml
.iflow/agents/: Architecture Expert.agent.md  Dear ImGui Expert.agent.md  Slang Shader Language Expert.agent.md  VMA Expert.agent.md  Vulkan Memory Allocator Expert.agent.md  cpp_expert_agent.md  graphics_vulkan_agent.md  project_manager_agent.md  vulkan-cpp-graphics-expert.md  vulkan_refactor_agent.md
.iflow/rules/: vulkan-cpp-graphics-expert.mdc
.iflow/skill/code-concise/: README.md  SKILL.md
.workbuddy/rules/: vulkan-cpp-graphics-expert.mdc
CMake/: CompilerFlags.cmake  Dependencies.cmake  FindVulkan.cmake  Options.cmake  Utils.cmake
CMake/Modules/: Application.cmake  Apps.cmake  Core.cmake  Editor.cmake  Platform.cmake  Rendering.cmake  Vulkan.cmake  VulkanModule.cmake
_codeql_build_dir/: CMakeCache.txt  Makefile  cmake_install.cmake
apps/editor/: main.cpp
apps/editor/bootstrap/: EditorAppBootstrap.cpp  EditorAppBootstrap.hpp
apps/editor/demo/: CubeData.hpp
docs/: AGENT_GUIDE.md  ARCHITECTURE_ISSUES_REVIEW.md  ARCHITECTURE_ISSUES_REVIEW_2.md  ARCHITECTURE_ISSUES_REVIEW_3.md  ARCHITECTURE_ISSUES_REVIEW_4.md  ARCHITECTURE_REFACTOR_PLAN.md  ARCHITECTURE_REVIEW.md  CODE_REVIEW_REPORT.md  CONAN_BUILD_GUIDE.md  DEEP_ARCHITECTURE_ANALYSIS.md  DEEP_ARCHITECTURE_LAYER_REVIEW.md  PHASE3_MIGRATION_FIXES.md  QUICK_REFERENCE.md  REFACTORING_PLAN.md  RENDERING_ARCHITECTURE_REVIEW.md  ROADMAP.md  VULKAN_DOCS_AUTO.md  VULKAN_DOCS_full_20251201_162554.md  VULKAN_DOCS_full_20251201_173015.md
docs/code_reviews/: INDEX.md  application_Application.md  application_Config.md  core_Camera.md  core_Logger.md  core_Vector.md  editor_Editor.md  editor_ImGuiManager.md  main_EditorApplication.md  platform_FileSystem.md  platform_InputManager.md  platform_Window.md  rendering_CameraController.md  rendering_CubeRenderPass.md  rendering_Material.md  rendering_MaterialLoader.md  rendering_Mesh.md  rendering_ObjLoader.md  rendering_RenderGraph.md  rendering_RenderGraphPass.md  rendering_RenderGraphResource.md  rendering_RenderGraphTypes.md  rendering_RenderTarget.md  rendering_ResourceManager.md  rendering_Scene.md  rendering_SceneViewport.md  rendering_ShaderManager.md  rendering_TextureLoader.md  rendering_Viewport.md  rendering_ViewportRenderPass.md  vulkan_Buffer.md  vulkan_CommandBuffer.md  vulkan_CoordinateTransform.md  vulkan_DepthBuffer.md  vulkan_Device.md  vulkan_Framebuffer.md  vulkan_Image.md  vulkan_Pipeline.md  vulkan_RenderPassManager.md  vulkan_ShaderModule.md  (+4 more)
docs/reviews_and_fixes/: 04_RENDERING_LAYER_RESPONSIBILITY_REVIEW.md  README.md
engine/editor/src/: Editor.cpp  (+1 more)
engine_rhi/: CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
engine_rhi/include/engine/rhi/: Buffer.hpp  CommandBuffer.hpp  Core.hpp  Device.hpp  Pipeline.hpp  Resource.hpp  SwapChain.hpp  Texture.hpp
engine_rhi/src/vulkan/: VulkanBuffer.cpp  VulkanCommandBuffer.cpp  VulkanDevice.cpp  VulkanPipeline.cpp  VulkanSwapChain.cpp  VulkanTexture.cpp
engine_rhi/vulkan/command/: CommandBuffer.hpp
engine_rhi/vulkan/device/: Device.hpp  SwapChain.hpp
engine_rhi/vulkan/memory/: VmaAllocator.hpp  VmaImage.hpp
engine_rhi/vulkan/pipelines/: Pipeline.hpp  RenderPassManager.hpp
engine_rhi/vulkan/resources/: Buffer.hpp  DepthBuffer.hpp  Framebuffer.hpp  Image.hpp  UniformBuffer.hpp
engine_rhi/vulkan/sync/: Synchronization.hpp
engine_rhi/vulkan/utils/: VulkanError.hpp
include/: Application.h  DescriptorSetmanager.h  HelloTriangleApplication.h  Platform.h  Renderer.h  ResourceManager.h  SwapchainResources.h  TimeStamp.h  VulkanDevice.h  VulkanRenderer.h  command_buffer_sync.h  constants.h  rendering.h  swapchain_management.h  utils.h  vulkan_init.h
include/core/: constants.h
include/editor/: Editor.hpp  ImGuiManager.hpp
include/platform/: Application.h  Engine.h
include/renderer/: Vertex.h
include/rendering/: SceneRenderer.hpp  SceneViewport.hpp  Viewport.hpp
include/vulkan_backend/: DescriptorSetManager.h  Rendering.h  ResourceManager.h  SwapchainResources.h  VertexInputDescription.h  VulkanDevice.h  VulkanRenderer.h  command_buffer_sync.h  swapchain_management.h  utils.h  vulkan_init.h
materials/: emissive.json  metal.json  normal_vis.json  plastic.json  textured.json
shaders/: compile_slang.bat  normal_vis.frag.spv  normal_vis.slang  normal_vis.vert.spv  pbr.frag.spv  pbr.slang  pbr.vert.spv  shader.frag  shader.vert  triangle.frag.spv  triangle.slang  triangle.vert.spv
src/: DescriptorSetManager.cpp  HelloTriangleApplication.cpp  Rendering.cpp  ResourceManager.cpp  SwapchainResources.cpp  VulkanApp.cpp  VulkanDevice.cpp  VulkanRenderer.cpp  command_buffer_sync.cpp  constants.cpp  main.cpp  rendering.cpp  swapchain_management.cpp  utils.cpp  vulkan_init.cpp
src/core/: constants.cpp
src/editor/: Editor.cpp  ImGuiManager.cpp
src/platform/: Engine.cpp  Logger.cpp  VulkanApp.cpp  main.cpp
src/rendering/: ComposedRenderer.cpp  Renderer.cpp  SceneViewport.cpp  Viewport.cpp
src/vulkan_backend/: DescriptorSetManager.cpp  Rendering.cpp  ResourceManager.cpp  SwapchainResources.cpp  Vertex.cpp  VulkanDevice.cpp  VulkanRenderer.cpp  command_buffer_sync.cpp  swapchain_management.cpp  utils.cpp  vulkan_init.cpp
tests/: CMakeLists.txt
tests/vulkan/memory/: VmaMemoryTest.cpp
tools/: add_bom.py  build.bat  clean_project.bat  conan_build.bat  simple_debug_check.py
(+181 files in other folders)
